[gd_scene load_steps=16 format=3 uid="uid://b2pekacyxy7ay"]

[ext_resource type="Texture2D" uid="uid://co2c7n8hayswl" path="res://assets/mapa.png" id="1_4leqd"]
[ext_resource type="PackedScene" uid="uid://b8govo71ehomm" path="res://tile_map.tscn" id="1_6xgc6"]
[ext_resource type="Script" path="res://pacman.gd" id="4_2ivog"]
[ext_resource type="AudioStream" uid="uid://bugi0bpv11fl3" path="res://sounds/siren_1.wav" id="4_d087u"]
[ext_resource type="AudioStream" uid="uid://cp4e48ok0xxkn" path="res://sounds/munch_1.wav" id="5_j4mjm"]
[ext_resource type="AudioStream" uid="uid://dikepn6y4qkty" path="res://sounds/munch_2.wav" id="6_y8ybh"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dpmvt"]
load_path = "res://.godot/imported/pacman.png-568cea45037b84aba3adf77cc6dbb1ad.ctex"

[sub_resource type="Animation" id="Animation_r6j3n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_5tny3"]
length = 0.133335
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 3), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_xei3u"]
length = 0.133335
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_kt4i4"]
resource_name = "anim_derecha"
length = 0.133335
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_fjdrd"]
resource_name = "idle"
length = 0.0166683
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_gr3f2"]
length = 0.133335
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666668),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fxvix"]
_data = {
"RESET": SubResource("Animation_r6j3n"),
"abajo": SubResource("Animation_5tny3"),
"arriba": SubResource("Animation_xei3u"),
"derecha": SubResource("Animation_kt4i4"),
"idle": SubResource("Animation_fjdrd"),
"izquierda": SubResource("Animation_gr3f2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0dhw"]
size = Vector2(16, 16)

[node name="Juego" type="Node2D"]
texture_filter = 1

[node name="ColorRect1" type="ColorRect" parent="."]
z_index = 1
offset_left = -47.0
offset_top = 92.0
offset_right = -39.0
offset_bottom = 100.0
color = Color(1, 0, 0, 0.411765)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 1
offset_left = -34.0
offset_top = 92.0
offset_right = -33.0
offset_bottom = 93.0
color = Color(0, 0.815686, 1, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
z_index = 1
offset_left = -28.0
offset_top = 92.0
offset_right = -27.0
offset_bottom = 93.0
color = Color(0, 1, 0.0823529, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
z_index = 1
offset_left = -23.0
offset_top = 92.0
offset_right = -22.0
offset_bottom = 93.0
color = Color(1, 0, 0.0156863, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
z_index = 1
offset_left = -88.0
offset_top = 93.0
offset_right = -80.0
offset_bottom = 101.0
color = Color(0.133333, 1, 0, 0.411765)

[node name="ColorRect6" type="ColorRect" parent="."]
z_index = 1
offset_left = -68.0
offset_top = 93.0
offset_right = -60.0
offset_bottom = 101.0
color = Color(0, 1, 0.882353, 0.411765)

[node name="TileMap" parent="." instance=ExtResource("1_6xgc6")]
position = Vector2(0, 16)

[node name="Plantilla" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.188235)
texture_filter = 1
position = Vector2(0, 16)
texture = ExtResource("1_4leqd")
centered = false

[node name="PacMan" type="CharacterBody2D" parent="."]
position = Vector2(113, 156)
script = ExtResource("4_2ivog")

[node name="Sprite2D" type="Sprite2D" parent="PacMan"]
texture = SubResource("CompressedTexture2D_dpmvt")
hframes = 14
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="PacMan/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_fxvix")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PacMan"]
shape = SubResource("RectangleShape2D_v0dhw")

[node name="Siren_1Sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 16)
stream = ExtResource("4_d087u")

[node name="Munch_1Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_j4mjm")

[node name="Munch_2Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_y8ybh")
